--- a/style.css
+++ b/style.css
@@ -5,12 +5,10 @@
 }
 body {
     width: 100vw;
-
 }
 .container {
     width: 70%;
     height: 100vh;
-    min-height: 450px;
     padding-top: 20px;
     margin: 0 auto;
 }
@@ -25,4 +23,5 @@ body {
     background-color: yellow;
     border: 1px solid black;
     margin: 0 5px;
+    cursor: pointer;
 }
